Cluster aggregate may incorrectly result in CollectionUUIDMismatch if fetching routing info fails

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 6.1.1, 6.0.3, 6.2.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • v6.1, v6.0
    • Execution Team 2022-10-31
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      If cluster aggregate's call to sharded_agg_helpers::getExecutionNsRoutingInfo fails, currently we throw CollectionUUIDMismatch if an expected collection UUID was provided. However, if the error is not specifically NamespaceNotFound then it's possible the database actually does exist and we should not throw CollectionUUIDMismatch.

            Assignee:
            Gregory Noma
            Reporter:
            Gregory Noma
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: