SERVER-70725 Narrow errors resulting in `CollectionUUIDMismatch` in cluster aggregate